# TCC

inc/: 8MW.h  globals.h
inc/clusters/: 10P.h  10P2.h  11P.h  11P2.h  11S.h  12O.h  12P.h  12P2.h  12S.h  13P2.h  7T.h  8O.h  8P.h  9P.h
src/: CMakeLists.txt  main.c  setup.c
src/clusters/: 10P.c  10P2.c  11O.c  11P.c  11P2.c  11PAA.c  11S.c  11SB.c  12O.c  12P.c  12P2.c  12S.c  13P2.c  13S.c  7PAB.c  7T.c  8MW.c  8O.c  8P.c  8PAA.c  8PAB.c  9P.c  9PAA.c  9PBB.c
